# sdl_project

./: CMakeLists.txt  README.md  build.sh  main.cpp
assets/: input.txt  output.txt
docs/: README.md
network/: Consumer.cpp  Consumer.h  Producer.cpp  Producer.h
src/: main.cpp
src/files/: Reader.cpp  Reader.h
src/network/: Consumer.cpp  Consumer.h  Producer.cpp  Producer.h
src/outputs/: Outputer.cpp  Outputer.h
